--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlashBrand - Turn Any Idea Into a Startup in 5 Minutes</title>
-    <meta name="description" content="Get everything you need to launch: brand identity, landing page, pitch deck, legal docs, and business plan. All AI-generated for just $1." />
-    <meta name="author" content="FlashBrand" />
+    <title>Blinked - Do a Blink and Your Business is Here</title>
+    <meta name="description" content="Revolutionary AI platform that creates complete startups in seconds. From idea to launch - just blink and your business exists." />
+    <meta name="author" content="Blinked" />
 
-    <meta property="og:title" content="c7a704ae-fbe4-4e72-bc1a-e47abe494af7" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Blinked - Instant Business Creation" />
+    <meta property="og:description" content="Do a blink and your business is here. Revolutionary AI startup platform." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@blinked_ai" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
