Transform Blinked to Smack Builder - Complete AI App Builder Platform

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blinked - Do a Blink and Your Business is Here</title>
-    <meta name="description" content="Revolutionary AI platform that creates complete startups in seconds. From idea to launch - just blink and your business exists." />
-    <meta name="author" content="Blinked" />
+    <title>Smack Builder - Autonomous AI App Builder</title>
+    <meta name="description" content="Revolutionary AI platform that autonomously builds complete applications. From concept to deployment - just describe your idea and watch it come to life." />
+    <meta name="author" content="Smack Builder" />
 
-    <meta property="og:title" content="Blinked - Instant Business Creation" />
-    <meta property="og:description" content="Do a blink and your business is here. Revolutionary AI startup platform." />
+    <meta property="og:title" content="Smack Builder - Autonomous AI App Builder" />
+    <meta property="og:description" content="Revolutionary AI that builds complete applications autonomously. Just describe your idea and watch it come to life." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/smack-builder-og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@blinked_ai" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@smack_builder" />
+    <meta name="twitter:image" content="/smack-builder-og.png" />
   </head>
 
   <body>
