--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@smack_builder" />
     <meta name="twitter:image" content="/smack-builder-og.png" />
+    
+    <!-- Favicon and app icons -->
+    <link rel="icon" type="image/svg+xml" href="/smack-builder-icon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/fonts/Inter-Variable.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/fonts/JetBrainsMono-Variable.woff2" as="font" type="font/woff2" crossorigin />
   </head>
 
   <body>
